# hiocr

./: .gitignore  CMakeLists.txt  README.md  cmake_uninstall.cmake.in  hiocr.desktop  prompt.md
script/: convert_phyunit.py
src/: .constants.h.kate-swp  CMakeLists.txt  appcontroller.cpp  appcontroller.h  appcontroller_impl.h  constants.h  contenttype.h  copyprocessor.cpp  copyprocessor.h  floatingball.cpp  floatingball.h  floatingball_impl.h  globalshortcutmanager.cpp  globalshortcutmanager.h  historymanager.cpp  historymanager.h  imageprocessor.cpp  imageprocessor.h  imageviewwidget.cpp  imageviewwidget.h  imageviewwidget_impl.h  kdeglobalshortcut.cpp  kdeglobalshortcut.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow_impl.h  markdownbridge.h  markdowncopybar.cpp  markdowncopybar.h  markdownrenderer.cpp  markdownrenderer.h  markdownsourceeditor.cpp  markdownsourceeditor.h  networkmanager.cpp  networkmanager.h  promptbar.cpp  promptbar.h  recognitionmanager.cpp  recognitionmanager.h  (+21 more)
src/resources/: markdown_renderer.html
src/resources/temml/: PhyUnit.js  Temml-Latin-Modern.css
